@@ -6,12 +6,19 @@ plugins {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_18
+sourceCompatibility = JavaVersion.VERSION_18
+targetCompatibility = JavaVersion.VERSION_18
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
 }
 
+compileTestJava {
+    options.compilerArgs += ["--enable-preview"]
+}
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
